--- a/website/index.html
+++ b/website/index.html
@@ -29,6 +29,8 @@
         </div>
     </div>
 
+    <div id="loader" class="loader" style="display: none;"></div>
+
     <div class="form__group" style="margin-top: 2em;">
         <p style="font-size: 70%; color: #666;">
             This website demonstrates a small Language Model with 124 million parameters, inspired by the 
